--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="app"></div>
-        <script src="/bundle.js" ></script>
+        <script src="/dist/bundle.js" ></script>
     </body>
     </html>
 </html>
